fix(scrollbar): fix scrollbar hidden in chrome problem

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -216,7 +216,3 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -webkit-appearance: none !important;
 }
-
-::-webkit-scrollbar {
-  display: none;
-}
